# werwiewas

./: .gitignore  README.md
docs/: app_architecture.mmd
flutter/: README.md  pubspec.yaml
flutter/ios/Runner/: Info.plist
flutter/lib/: app.dart  main.dart  page_service.dart  rag_service.dart  recorder_service.dart  widgets.dart  www_main.dart
flutter/test/: widget_test.dart
flutter/web/: index.html
python/backend/: README.md  pyproject.toml
python/backend/backend/: backend.py  server.py  test_backend.py
python/backend/backend/config/: whisper_bs_llmware.yaml
python/homepageparser/: README.md  pyproject.toml
python/homepageparser/homepageparser/: __init__.py  beautifulsoup.py  factory.py  html2text.py  parser_interface.py  utils.py
python/rag/: pyproject.toml
python/rag/rag/: __init__.py  chatpgt.py  factory.py  hugging_face.py  llmware.py  rag_interface.py
python/rag/rag/dataset/: __init__.py  rag_dataset.py
python/speechrecognition/: README.md  pyproject.toml
python/speechrecognition/speechrecognition/: whisper.py
www/: README.md  pubspec.yaml
www/android/app/: build.gradle
www/android/app/src/main/kotlin/com/example/www/: MainActivity.kt
www/ios/Runner.xcodeproj/: project.pbxproj
www/linux/: CMakeLists.txt  my_application.cc
www/macos/Runner.xcodeproj/: project.pbxproj
www/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
www/macos/Runner/Configs/: AppInfo.xcconfig
www/windows/runner/: Runner.rc
