[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Nick Schneider <info@nick-schneider.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
pydub = "^0.25.1"
python-multipart = "^0.0.19"
speechrecognition = {path = "../speechrecognition", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
server = "backend.server:main"