[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Nick Schneider <info@nick-schneider.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
pydub = "^0.25.1"
python-multipart = "^0.0.19"
speechrecognition = {path = "../speechrecognition", develop = true}
rag = {path = "../rag", develop = true}
homepageparser = {path = "../homepageparser", develop = true}
numba = "^0.60.0"
numpy = "^2.0.2"
llvmlite = "^0.43.0"
pydantic = "^2.10.3"
pyyaml = "^6.0.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
server = "backend.server:main"

[tool.ruff]
# Same as Black.
line-length = 120
indent-width = 4

# Assume Python 3.11
target-version = "py311"

lint.select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "D",   # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"  # Accepts: "google", "numpy", or "pep257".

[tool.pytest.ini_options]
testpaths = ["backend"]
pythonpath = ["."]
