[tool.poetry]
name = "homepageparser"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
html2text = "^2024.2.26"
webdriver-manager = "^4.0.2"
selenium = "^4.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)
# Additionally pydocstyle ("D") and warnings ("W")
select = ["E4", "E7", "E9", "F", "D", "W", "I"]
ignore = []