[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
datasets = "^3.2.0"
transformers = "^4.47.0"
langchain-text-splitters = "^0.3.2"
faiss-cpu = "^1.9.0.post1"
llmware = "^0.3.9"
openai = "^1.57.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
server = "backend.server:main"

[tool.ruff]
# Same as Black.
line-length = 120
indent-width = 4

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)
# Additionally pydocstyle ("D"), warnings ("W") and sorted imports ("I")
select = ["E4", "E7", "E9", "F", "D", "W", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["backend"]
pythonpath = ["."]
