[tool.poetry]
name = "speechrecognition"
version = "0.1.0"
description = ""
authors = ["Nick Schneider <info@nick-schneider.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numba = "^0.60.0"
openai-whisper = "^20240930"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
