[tool.poetry]
name = "speechrecognition"
version = "0.1.0"
description = ""
authors = ["Nick Schneider <info@nick-schneider.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai-whisper = "^20240930"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
indent-width = 4

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)
# Additionally pydocstyle ("D"), warnings ("W") and sorted imports ("I")
select = ["E4", "E7", "E9", "F", "D", "W", "I"]
ignore = []
