[tool.poetry]
name = "speechrecognition"
version = "0.1.0"
description = ""
authors = ["Nick Schneider <info@nick-schneider.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai-whisper = "^20240930"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Same as Black.
line-length = 120
indent-width = 4

# Assume Python 3.11
target-version = "py311"

lint.select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "D",   # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"  # Accepts: "google", "numpy", or "pep257".
